src/main/default/objects/MultiReport_Export_Header_Override__c/MultiReport_Export_Header_Override__c.object-meta.xml
<CustomObject>
    <description>Used to override the Default Field label in the Header od the export file</description>
    <label>MultiReport Export Header Override</label>
    <nameField>
        <displayFormat>MRX-HeaderOverride-{00000}</displayFormat>
        <label>MultiReport_Export_Header_Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MultiReport Export Header Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>