src/main/default/objects/MultiReport_Export_Header_Override__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>The Actual Label of the Field</description>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>