src/main/default/objects/MultiReport_Export_Header_Override__c/fields/MultiReport_Export_Item__c.field-meta.xml
<CustomField>
    <fullName>MultiReport_Export_Item__c</fullName>
    <label>MultiReport Export Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Item must belong to the Template</errorMessage>
        <filterItems>
            <field>MultiReport_Export_Item__c.MultiReport_Export_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.MultiReport_Export_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MultiReport_Export_Item__c</referenceTo>
    <relationshipLabel>MultiReport Export Header Overrides</relationshipLabel>
    <relationshipName>MultiReport_Export_Header_Overrides</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>