src/main/default/objects/MultiReport_Export_Header_Override__c/fields/Override_Value__c.field-meta.xml
<CustomField>
    <fullName>Override_Value__c</fullName>
    <description>The value to override the field label and display in the Header of the export</description>
    <inlineHelpText>The value to override the field label and display in the Header of the export</inlineHelpText>
    <label>Override Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>