src/main/default/objects/MultiReport_Export_Header_Override__c/fields/Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Name__c</fullName>
    <formula>MultiReport_Export_Item__r.Sheet_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sheet Name</label>
    <type>Text</type>
</CustomField>